test/e2e/features/header_modifiers/testdata/common.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-1
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
      - name: httpbin
        port: 8000
---
