test/e2e/features/header_modifiers/testdata/curl.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: headermods-curl
  namespace: kgateway-base
  labels:
    app: headermods-curl
    version: v1
    app.kubernetes.io/name: headermods-curl
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: curl
      image: ghcr.io/kgateway-dev/curl:7.83.1
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"
