test/e2e/features/header_modifiers/testdata/header-modifiers-ls.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: headermods-ls-policy
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: headermods-ls
  headerModifiers:
    request:
      add:
        - name: X-Custom-Request-Header
          value: custom-request-value-ls
      set:
        - name: X-Custom-Request-Header-Set
          value: custom-request-value-ls
      remove:
        - X-Request-Id
    response:
      add:
        - name: X-Custom-Response-Header
          value: custom-response-value-ls
      set:
        - name: X-Custom-Response-Header-Set
          value: custom-response-value-ls
      remove:
        - X-Envoy-Upstream-Service-Time
