test/e2e/features/header_modifiers/testdata/header-modifiers-route-ls.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: headermods-route-policy-2
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: headermods-route-2
  headerModifiers:
    request:
      add:
        - name: X-Custom-Request-Header
          value: custom-request-value-route
      set:
        - name: X-Custom-Request-Header-Set
          value: custom-request-value-route
      remove:
        - X-Request-Id
    response:
      add:
        - name: X-Custom-Response-Header
          value: custom-response-value-route
      set:
        - name: X-Custom-Response-Header-Set
          value: custom-response-value-route
      remove:
        - X-Envoy-Upstream-Service-Time
