test/e2e/features/header_modifiers/testdata/httpbin.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: headermods-httpbin
  namespace: kgateway-base
---
apiVersion: v1
kind: Service
metadata:
  name: headermods-httpbin
  namespace: kgateway-base
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
    - name: tcp
      port: 9000
  selector:
    app.kubernetes.io/name: headermods-httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headermods-httpbin
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: headermods-httpbin
      version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headermods-httpbin
        version: v1
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: headermods-httpbin
      containers:
        - image: docker.io/mccutchen/go-httpbin:v2.6.0
          imagePullPolicy: IfNotPresent
          name: httpbin
          command: [ go-httpbin ]
          args:
            - "-port"
            - "8080"
            - "-max-duration"
            - "600s"
          ports:
            - containerPort: 8080
        - name: curl
          image: ghcr.io/kgateway-dev/curl:7.83.1
          imagePullPolicy: IfNotPresent
          command:
            - "tail"
            - "-f"
            - "/dev/null"
