test/e2e/features/header_modifiers/testdata/setup-with-listenersets.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: ls
spec:
  parentRef:
    name: gateway
    namespace: kgateway-base
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
    - name: foo
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-2
spec:
  parentRefs:
    - kind: ListenerSet
      group: gateway.networking.k8s.io
      name: ls
      namespace: default
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
      - name: httpbin
        port: 8000
